src/objects/Project_Service_Level_Criteria__c.object
<CustomObject>
    <description>Created as part of SIR- SFDC-91: This object contains the rules for defining Project Service Level.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Created as part of SIR SFDC-91.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Created as part of SIR SFDC-91: Contains priority of the entitlement</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Service_Level__c</fullName>
        <description>Created as part of SIR SFDC-91:contains project service level</description>
        <label>Project Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Created as part of SIR SFDC-91: This field contains the values of entitlement sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development Project</fullName>
                </value>
                <value>
                    <fullName>Support for FAEs</fullName>
                </value>
                <value>
                    <fullName>NXP Support Contract</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Support for TMMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Created as part of SIR SFDC-91: This field contains values of entitlement type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Support</fullName>
                </value>
                <value>
                    <fullName>Web Support</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Service Level Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Project-{00000}</displayFormat>
        <label>Project SLA Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Level Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>